ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /testpath/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: dev-svc
                port:
                  number: 80
